[package]
name = "nvtx-rs"
version = "1.1.0"
authors = ["Spencer Imbleau <spencer@imbleau.com>"]
edition = "2021"
description = "Rust bindings for the NVIDIA® Tools Extension SDK (NVTX)"
repository = "https://github.com/simbleau/nvtx-rs"
license = "MIT/Apache-2.0"
categories = ["api-bindings"]
readme = "README.md"
include = ["nvtx-sys/NVTX/c/*", "nvtx-sys/export.c", "src/*", "build.rs"]

[build-dependencies]
cc = "1.0.73"